新增第150个小实例：仿制B站PC端首页的吃豆人轮播图

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,12 @@ images/144/3.jpg
 images/147/1.jpg
 images/147/2.jpg
 images/147/3.jpg
+images/150/1.jpg
+images/150/2.jpg
+images/150/3.jpg
+images/150/4.jpg
+images/150/5.jpg
+images/150/6.jpg
+images/150/7.jpg
+images/150/8.jpg
+images/150/9.jpg
